--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+* {
+  box-sizing: border-box;
+}
 
 /* --------------------------------------------- Styling body --------------------------------------------- */
 body {
@@ -7,16 +9,27 @@ body {
   padding: 0;
   font-family: sans-serif;
   color: black;
-  background-image: url('../img/background.jpg') !important;
+  background-image: url("../img/background.jpg") !important;
 }
 
 /* --------------------------------------------- Styling navigation --------------------------------------------- */
 
+nav > .nav-btn {
+  display: none;
+}
+
+nav > #nav-check {
+  display: none;
+}
+
 nav ul {
+  float:right;
+  display: inline;
   text-align: right;
-  margin: 0.5% 1% 0;
+  margin: 0.5% 1% 0% 0px;
   padding: 0;
   height: 6rem;
+  width: 40rem;
 }
 
 li {
@@ -28,19 +41,20 @@ li {
   border-bottom: 1px solid white;
   border-radius: 3px;
   width: 75px;
-  text-align: center
+  text-align: center;
 }
 
-li:hover, .active{
-  transition:0.2s linear;
+li:hover,
+.active {
+  transition: 0.2s linear;
 }
 
-.active .link{
+.active .link {
   color: #feed13;
 }
 
-li:hover .link{
-  color:#feed13;
+li:hover .link {
+  color: #feed13;
 }
 
 .logo {
@@ -50,15 +64,15 @@ li:hover .link{
   margin: 0.7%;
 }
 
-ul li .link{
-  display:block;
+ul li .link {
+  display: block;
   color: #fff;
   text-decoration: none;
 }
 
 /* --------------------------------------------- Styling container --------------------------------------------- */
 
-.container{
+.container {
   display: grid;
   grid-template-rows: 7rem auto;
 }
@@ -81,28 +95,28 @@ ul li .link{
   border-radius: 5px;
 }
 
-.api1{
+.api1 {
   grid-column: 1;
-  margin:0.5rem;
+  margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color:white;
+  background-color: white;
 }
 
-.api2{
+.api2 {
   grid-column: 2;
-  margin:0.5rem;
+  margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color:white;
+  background-color: white;
 }
 
-.api3{
+.api3 {
   grid-column: 3;
-  margin:0.5rem;
+  margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color:white;
+  background-color: white;
 }
 
 /* ------------------------------------- about styling ------------------------------------- */
@@ -114,11 +128,11 @@ ul li .link{
   grid-row: 5;
   padding: 1rem;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.1fr 1fr 1fr 0.1fr ;
+  grid-template-rows: 0.1fr 1fr 1fr 0.1fr;
   border-radius: 4px;
 }
 
-.Text{
+.Text {
   grid-column: 2/4;
   grid-row: 2/4;
   padding: 1rem;
@@ -127,13 +141,13 @@ ul li .link{
   overflow: hidden;
 }
 
-h2{
-  margin-top:0;
+h2 {
+  margin-top: 0;
 }
 
-.img-about{
+.img-about {
   grid-column: 4/6;
-  grid-row:2/4;
+  grid-row: 2/4;
   width: auto;
   height: auto;
   background-color: white;
@@ -143,7 +157,7 @@ h2{
 
 /* ------------------------------------- footer styling ------------------------------------- */
 
-.footer{
+.footer {
   padding: 0;
   display: grid;
   background-color: black;
@@ -152,7 +166,7 @@ h2{
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-h3{
+h3 {
   margin: 0.5rem;
   color: white;
   font-size: 1.2rem;
@@ -160,34 +174,93 @@ h3{
   font-weight: 500;
 }
 
-.social-media{
+.social-media {
   grid-column: 1;
 }
 
-.contact-footer{
+.contact-footer {
   grid-column: 2;
 }
 
-.locatie{
+.locatie {
   grid-column: 3;
 }
 
-.links{
+.links {
   grid-column: 4;
 }
 
 /* ------------------------------------- responsive styling ------------------------------------- */
 
 @media only screen and (max-width: 1042px) {
-
   /* ------------------------------------- responsive navigation styling ------------------------------------- */
 
-  ul li .link{
-    display: block;
-    color: #fff;
-    text-decoration: none;
+  .logo {
+    float: left;
+    height: 4rem;
+    position: relative;
+    margin: 4%;
   }
 
+  nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+
+  nav > .nav-btn > label {
+    display: inline-block;
+    width: 6.1rem;
+    height: 6.1rem;
+    
+    padding: 27px;
+  }
+
+  nav > .nav-btn > label:hover,nav  #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  nav > .nav-btn > label > span {
+    display: block;
+    width: 3rem;
+    height: 1rem;
+    border-top: 6px solid #eee;
+  }
+
+  nav > ul {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #131f35;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 6rem;
+    left: 0;
+    margin: 0;
+  }
+
+  nav > ul > .link {
+    display: block;
+    width: 100%;
+  }
+
+  nav > #nav-check:not(:checked) ~ ul {
+    height: 0px;
+  }
+
+  nav > #nav-check:checked ~ ul {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+
+  li{
+    display: inline;
+    border-bottom: 0px;
+    border: 0px;
+    text-decoration: underline white;
+  }
   /* ------------------------------------- responsive content styling ------------------------------------- */
 
   .content {
@@ -200,38 +273,38 @@ h3{
     display: grid;
     grid-column: 1/4;
     grid-row: 2/5;
-    grid-template-rows: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 0.4fr 1fr 0.4fr;
     border-radius: 5px;
   }
-  
-  .api1{
+
+  .api1 {
     grid-column: 2;
     grid-row: 1;
-    margin:0.5rem;
+    margin: 0.5rem;
     padding: 0.5rem;
     border-radius: 4px;
-    background-color:white;
+    background-color: white;
   }
-  
-  .api2{
+
+  .api2 {
     grid-column: 2;
     grid-row: 2;
-    margin:0.5rem;
+    margin: 0.5rem;
     padding: 0.5rem;
     border-radius: 4px;
-    background-color:white;
+    background-color: white;
   }
-  
-  .api3{
+
+  .api3 {
     grid-column: 2;
     grid-row: 3;
-    margin:0.5rem;
+    margin: 0.5rem;
     padding: 0.5rem;
     border-radius: 4px;
-    background-color:white;
+    background-color: white;
   }
-  
+
   /* ------------------------------------- responsive about styling ------------------------------------- */
 
   .About {
@@ -245,7 +318,7 @@ h3{
     border-radius: 4px;
   }
 
-  .Text{
+  .Text {
     grid-column: 2;
     grid-row: 2;
     padding: 1rem;
@@ -254,7 +327,7 @@ h3{
     overflow: hidden;
   }
 
-  .img-about{
+  .img-about {
     grid-column: 3;
     grid-row: 2;
     width: auto;
@@ -265,7 +338,7 @@ h3{
 
   /* ------------------------------------- responsive footer styling ------------------------------------- */
 
-  .footer{
+  .footer {
     padding: 0;
     display: grid;
     background-color: black;
@@ -275,4 +348,3 @@ h3{
     float: bottom;
   }
 }
-
