--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,10 @@ li {
   padding: 0.4%;
   margin: 0.3%;
   top: 1.5rem;
-  border-bottom: 1px solid white;
-  border-radius: 3px;
   width: 75px;
   text-align: center;
 }
 
-li:hover,
-.active {
-  transition: 0.2s linear;
-}
 
 .active .link {
   color: #feed13;
@@ -55,6 +49,7 @@ li:hover,
 
 li:hover .link {
   color: #feed13;
+  transition: 0.2s linear;;
 }
 
 .logo {
@@ -153,6 +148,19 @@ h2 {
   background-color: white;
   border-radius: 4px;
   margin: 1rem;
+}
+
+/* ------------------------------------- about.html styling ------------------------------------- */
+
+.About1 {
+  min-height: 500px;
+  display: grid;
+  grid-column: 2/7;
+  grid-row: 2;
+  padding: 1rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.1fr 1fr 1fr 0.1fr;
+  border-radius: 4px;
 }
 
 /* ------------------------------------- footer styling ------------------------------------- */
