--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Quicksand', sand-serif;
+  font-family: "Quicksand", sand-serif;
 }
 
 /* --------------------------------------------- Styling body --------------------------------------------- */
@@ -17,8 +17,6 @@ body {
   background-image: url("../img/background.jpg") !important;
 }
 
-
-
 /* --------------------------------------------- Styling navigation --------------------------------------------- */
 
 nav > .nav-btn {
@@ -30,7 +28,7 @@ nav > #nav-check {
 }
 
 nav ul {
-  float:right;
+  float: right;
   display: inline;
   text-align: right;
   margin: 0.5% 1% 0% 0px;
@@ -48,7 +46,6 @@ li {
   width: 75px;
   text-align: center;
 }
-
 
 .active .link {
   color: #feed13;
@@ -83,9 +80,10 @@ ul li .link {
 
 .content {
   display: grid;
+  position: relative;
   min-height: 00%;
   grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr 1fr 0.3fr;
-  grid-template-rows: 2rem 15rem 15rem 4rem 30rem 5rem 10rem;
+  grid-template-rows: 2rem 15rem 15rem 4rem 30rem 5rem;
 }
 
 /* ------------------------------------- API styling ------------------------------------- */
@@ -174,138 +172,120 @@ h1 {
 
 /* ------------------------------------- contact.html styling -----------------------------------*/
 
-*{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: 'Quicksand', sans-serif;
+.containercontact {
+  position: relative;
+  display: grid;
+  grid-template-columns: 0.1fr 1fr 0.1fr;
+  grid-template-rows: 0.1fr 1fr 0.1fr;
 }
 
-body{
-	height: 100vh;
-	width: 100%;
+
+.context-box {
+  margin: 0 5rem 15rem 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 2;
+  grid-row: 2;
 }
 
-.containercontact{
-	position: relative;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px 100px;
+.left {
+  background-size: cover;
+  grid-column: 1;
+  height: 100%;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  border-radius: 7px;
 }
 
-.containercontact:after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background: url("img/bg.jpg") no-repeat center;
-	background-size: cover;
-	filter: blur(50px);
-	z-index: -1;
-}
-.contact-box{
-	max-width: 850px;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: #fff;
-	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+.right {
+  padding: 25px 40px;
+  border-radius: 7px;
+  grid-column: 2;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 }
 
-.left{
-	background: url("img/bg.jpg") no-repeat center;
-	background-size: cover;
-	height: 100%;
-}
-
-.right{
-	padding: 25px 40px;
-}
-
-h2{
-	position: relative;
-	padding: 0 0 10px;
-	margin-bottom: 10px;
+.right h2 {
+  position: relative;
+  padding: 0 0 10px;
+  margin-bottom: 10px;
   color: white;
 }
 
-h2:after{
-	content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    height: 4px;
-    width: 50px;
-    border-radius: 2px;
+.right h2:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  height: 4px;
+  width: 50px;
+  border-radius: 2px;
 }
 
-.field{
-	width: 100%;
-	border: 2px solid rgba(0, 0, 0, 0);
-	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
-	margin-bottom: 22px;
-	transition: .3s;
+.field {
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 7px;
+  outline: none;
+  background-color: rgba(230, 230, 230, 0.6);
+  padding: 0.5rem 1rem;
+  font-size: 1.1rem;
+  margin-bottom: 22px;
+  transition: 0.3s;
 }
 
-.field:hover{
-	background-color: rgba(0, 0, 0, 0.1);
+.field:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #fff;
 }
 
-textarea{
-	min-height: 150px;
+textarea {
+  min-height: 150px;
 }
 
-.btn{
-	width: 100%;
-	padding: 0.5rem 1rem;
-	background-color: #2ecc71;
-	color: #fff;
-	font-size: 1.1rem;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: .3s;
+.btncontact {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 7px;
+  background-color: #2180da;
+  color: #fff;
+  font-size: 1.1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-.btn:hover{
-    background-color: #27ae60;
+.btncontact:hover {
+  background-color: #4fa1ee;
 }
 
-.field:focus{
-    border: 2px solid rgba(30,85,250,0.47);
-    background-color: #fff;
+.field:focus {
+  border: 2px solid rgba(30, 85, 250, 0.47);
+  background-color: #fff;
 }
 
-@media screen and (max-width: 880px){
-	.contact-box{
-		grid-template-columns: 1fr;
-	}
-	.left{
-		height: 200px;
-	}
+@media screen and (max-width: 880px) {
+  .contact-box {
+    grid-template-columns: 1fr;
+  }
+  .left {
+    height: 200px;
+  }
 }
 /* ------------------------------------- footer styling ------------------------------------- */
 
 .footer {
   padding: 0;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   display: grid;
   background-color: black;
   grid-column: 1/8;
-  grid-row: 7;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  height: 13rem;
 }
 
-h3 {
+.footer h3 {
   margin: 0.5rem;
   color: white;
   font-size: 1.2rem;
@@ -327,6 +307,40 @@ h3 {
 
 .links {
   grid-column: 4;
+}
+
+/* ------------------------------------- word-lid styling ------------------------------------- */
+.content-word-lid {
+  grid-template-columns: 0.2fr 1fr 0.2fr;
+  grid-template-rows: 0.5fr 1fr 1fr 0.5fr;
+}
+
+.word-lid-info {
+  grid-column: 2/7;
+  grid-row: 5/6;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 10px;
+}
+
+.word-lid-image {
+  grid-column: 2/4;
+  grid-row: 2/4;
+  background-color: #fff;
+}
+
+.word-lid-image2 {
+  grid-column: 5/7;
+  grid-row: 2/4;
+  background-color: #fff;
+}
+
+.word-lid-info h2 {
+  font-size: 40px;
+}
+
+.word-lid-info h3 {
+  font-size: 30px;
 }
 
 /* ------------------------------------- responsive styling ------------------------------------- */
@@ -352,11 +366,12 @@ h3 {
     display: inline-block;
     width: 6.1rem;
     height: 6.1rem;
-    
+
     padding: 27px;
   }
 
-  nav > .nav-btn > label:hover,nav  #nav-check:checked ~ .nav-btn > label {
+  nav > .nav-btn > label:hover,
+  nav #nav-check:checked ~ .nav-btn > label {
     background-color: rgba(0, 0, 0, 0.3);
   }
 
@@ -394,7 +409,7 @@ h3 {
     overflow-y: auto;
   }
 
-  li{
+  li {
     display: inline;
     border-bottom: 0px;
     border: 0px;
@@ -474,15 +489,15 @@ h3 {
     background-color: white;
     border-radius: 4px;
   }
-    /* ------------------------------------- leden styling ------------------------------------- */
+  /* ------------------------------------- leden styling ------------------------------------- */
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(8, 5vw);
-      grid-gap: 15px;
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
   }
-    .gallery__img {
+  .gallery__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -493,13 +508,13 @@ h3 {
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
-}
-.gallery__item--2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
+  }
+  .gallery__item--2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
 
   /* ------------------------------------- responsive footer styling ------------------------------------- */
 
@@ -513,9 +528,9 @@ h3 {
   }
 }
 
+/* ------------------------------------- smaller screen styling ------------------------------------- */
 
 @media only screen and (max-width: 720px) {
-
   .content {
     display: grid;
     grid-template-columns: 0.3fr 1fr 0.3fr;
