--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,8 @@ ul li .link {
   position: relative;
   min-height: 00%;
   grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr 1fr 0.3fr;
-  grid-template-rows: 2rem 15rem 15rem 4rem 30rem 5rem;
+  grid-template-rows: 2rem 15rem 15rem 4rem 30rem 15rem;
+  
 }
 
 /* ------------------------------------- API styling ------------------------------------- */
@@ -133,6 +134,7 @@ ul li .link {
 }
 
 .Text {
+  
   grid-column: 2/4;
   grid-row: 2/4;
   padding: 1rem;
@@ -189,6 +191,7 @@ h1 {
 }
 
 .left {
+  background-color: rgba(230, 230, 230, 0.6);
   background-size: cover;
   grid-column: 1;
   height: 100%;
@@ -311,27 +314,30 @@ textarea {
 
 /* ------------------------------------- word-lid styling ------------------------------------- */
 .content-word-lid {
-  grid-template-columns: 0.2fr 1fr 0.2fr;
-  grid-template-rows: 0.5fr 1fr 1fr 0.5fr;
+  position: relative;
+  display: grid;
+  padding: 5rem 0 20rem 0;
+  grid-template-columns: 0.2fr 1fr 1rem 1fr 0.2fr;
+  grid-template-rows: 0.5fr 25rem 2rem 20rem 0.5fr;
 }
 
 .word-lid-info {
-  grid-column: 2/7;
-  grid-row: 5/6;
+  grid-column: 2/5;
+  grid-row: 4;
   background-color: #fff;
   padding: 40px;
   border-radius: 10px;
 }
 
 .word-lid-image {
-  grid-column: 2/4;
-  grid-row: 2/4;
+  grid-column: 2;
+  grid-row: 2;
   background-color: #fff;
 }
 
 .word-lid-image2 {
-  grid-column: 5/7;
-  grid-row: 2/4;
+  grid-column: 4;
+  grid-row: 2;
   background-color: #fff;
 }
 
@@ -420,7 +426,7 @@ textarea {
   .content {
     display: grid;
     grid-template-columns: 0.3fr 1fr 0.3fr;
-    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 35rem auto;
+    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 35rem 3rem;
   }
 
   .API {
@@ -534,7 +540,7 @@ textarea {
   .content {
     display: grid;
     grid-template-columns: 0.3fr 1fr 0.3fr;
-    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 50rem auto;
+    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 50rem 10rem;
   }
 
   .About {
