--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .api2 {
@@ -109,7 +109,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .api3 {
@@ -117,7 +117,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 /* ------------------------------------- about styling ------------------------------------- */
@@ -139,7 +139,7 @@ ul li .link {
   grid-row: 2/4;
   padding: 1rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
   overflow: hidden;
 }
 
@@ -154,7 +154,7 @@ h1 {
   grid-row: 2/4;
   width: auto;
   height: auto;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
   border-radius: 4px;
   margin: 1rem;
 }
@@ -324,7 +324,7 @@ textarea {
 .word-lid-info {
   grid-column: 2/5;
   grid-row: 4;
-  background-color: #fff;
+  background-color: rgba(230, 230, 230, 0.6);
   padding: 40px;
   border-radius: 10px;
 }
@@ -332,13 +332,13 @@ textarea {
 .word-lid-image {
   grid-column: 2;
   grid-row: 2;
-  background-color: #fff;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .word-lid-image2 {
   grid-column: 4;
   grid-row: 2;
-  background-color: #fff;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .word-lid-info h2 {
