--- a/css/Temp.css
+++ b/css/Temp.css
@@ -1,58 +1,49 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.containerlid {
-    display: grid;
-    grid-template-rows: 7rem auto;
-  }
-
-.contentlid {
-    display: grid;
-    min-height: 100%;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 15rem 15rem 4rem 30rem 5rem 10rem;
-  }
+.lid-content {
+  grid-template-columns: 0.2fr 1fr 1fr 1fr 0.2fr;
+  display: grid;
+  position: relative;
+  height: 100vh;
   
+}
 
 .lid {
-    display: grid;
-    grid-column: 2/7;
-    grid-row: 2/4;
-    grid-template-columns: 2fr 2fr 2fr;
-    border-radius: 5px;
-  }
-  
-  .lid1 {
-    grid-column: 1;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
+  display: grid;
+  grid-column: 2/5;
+  grid-template-columns: 2fr 2fr 2fr;
+  border-radius: 5px;
+  margin-bottom: 10rem;
+}
 
-  .lid2 {
-    grid-column: 2;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
-  
-  .lid3 {
-    grid-column: 3;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
+.lid1 {
+  min-height: 10rem;
+  grid-column: 1;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: white;
+}
 
-  
-  
-  
-  
+.lid2 {
+  min-height: 10rem;
+  grid-column: 2;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: white;
+}
 
-  
+.lid3 {
+  min-height: 10rem;
+  grid-column: 3;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: white;
+}
