--- a/css/style.css
+++ b/css/style.css
@@ -126,14 +126,16 @@ ul li .link {
   min-height: 500px;
   display: grid;
   grid-column: 2/7;
-  grid-row: 2;
+  grid-row: 3;
   padding: 1rem;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.1fr 1fr 1fr 0.1fr;
   border-radius: 4px;
   background-color: white;
 }
-/* ------------------------------------- about styling ------------------------------------- */
+
+/* ------------------------------------- about styling -------------------------------------
+ */
 
 .About {
   min-height: 500px;
@@ -604,7 +606,7 @@ textarea {
     grid-template-columns: 0.2fr 1fr 0.2fr;
     grid-template-rows: 0.1fr 1.5fr 2fr 0.1fr;
     border-radius: 4px;
-  }
+    }
 
   .Text {
     grid-column: 2;
@@ -622,5 +624,19 @@ textarea {
     height: auto;
     background-color: white;
     border-radius: 4px;
+  }
+  
+  .navbar-brand .uil {
+    font-size: 40px;
+  }
+
+  .social-links .uil {
+    color: #f7f3f3;
+    font-size: 20px;
+    display: block;
+    margin: 5px 0;
+  }
+  .social-links .uil:hover {
+    color: #00ffff;
   }
 }
