--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ ul li .link {
   position: relative;
   min-height: 00%;
   grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr 1fr 0.3fr;
-  grid-template-rows: 2rem 15rem 15rem 4rem 30rem 15rem;
+  grid-template-rows: 2rem 15rem 15rem 1rem 30rem 5rem;
 }
 
 /* ------------------------------------- API styling ------------------------------------- */
@@ -177,7 +177,7 @@ h1 {
 
 .about-content {
   position: relative;
-  height: 100vh;
+  height: 50rem;
   padding-top: 5rem;
 }
 
@@ -214,7 +214,7 @@ h1 {
 }
 
 .context-box {
-  margin: 0 5rem 15rem 5rem;
+  margin: 0 5rem 5rem 5rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 2;
@@ -311,7 +311,7 @@ textarea {
   padding: 0;
   position: absolute;
   width: 100%;
-  bottom: 0%;
+  bottom: -10rem;
   display: grid;
   background-color: black;
   grid-column: 1/8;
@@ -394,9 +394,9 @@ textarea {
 .content-word-lid {
   position: relative;
   display: grid;
-  padding: 5rem 0 20rem 0;
+  padding: 5rem 0 10rem 0;
   grid-template-columns: 0.2fr 1fr 1rem 1fr 0.2fr;
-  grid-template-rows: 0.5fr 25rem 2rem auto 0.5fr;
+  grid-template-rows: 0.5fr 25rem 2rem auto ;
 }
 
 .word-lid-info {
