--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   margin: 0;
   font-family: "Quicksand", sand-serif;
-  
 }
 
 /* --------------------------------------------- Styling body --------------------------------------------- */
@@ -17,8 +16,6 @@ body {
   height: 100vh;
   background-image: url("../img/background.jpg") !important;
 }
-
-
 
 /* --------------------------------------------- Styling navigation --------------------------------------------- */
 
@@ -103,7 +100,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .api2 {
@@ -111,7 +108,7 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 .api3 {
@@ -119,19 +116,22 @@ ul li .link {
   margin: 0.5rem;
   padding: 0.5rem;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
+}
+
+.nieuws-content {
+  display: grid;
+  grid-template-columns: 20rem 1fr 20rem;
+  grid-template-rows: 8rem 1fr 10rem;
 }
 
 .api4 {
   min-height: 500px;
-  display: grid;
-  grid-column: 2/7;
-  grid-row: 3;
+  grid-column: 2;
+  grid-row: 2;
   padding: 1rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.1fr 1fr 1fr 0.1fr;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgba(230, 230, 230, 0.6);
 }
 
 /* ------------------------------------- about styling -------------------------------------
@@ -297,6 +297,12 @@ textarea {
   background-color: #fff;
 }
 
+.field:focus:hover {
+  border: 2px solid rgba(30, 85, 250, 0.47);
+  background-color: #fff;
+  color: #000;
+}
+
 @media screen and (max-width: 880px) {
   .contact-box {
     grid-template-columns: 1fr;
@@ -343,52 +349,52 @@ textarea {
   grid-column: 4;
 }
 
-  /* ------------------------------------- leden styling ------------------------------------- */
+/* ------------------------------------- leden styling ------------------------------------- */
 
-  .lid-content {
-    grid-template-columns: 0.2fr 1fr 1fr 1fr 0.2fr;
-    display: grid;
-    position: relative;
-    height: 100vh;
-  }
-  
-  .lid {
-    display: grid;
-    grid-column: 2/5;
-    grid-template-columns: 2fr 2fr 2fr;
-    border-radius: 5px;
-    margin-bottom: 10rem;
-  }
-  
-  .lid1 {
-    min-height: 10rem;
-    grid-column: 1;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
-  
-  .lid2 {
-    min-height: 10rem;
-    grid-column: 2;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
-  
-  .lid3 {
-    min-height: 10rem;
-    grid-column: 3;
-    margin: 1rem;
-    padding: 0.5rem;
-    height: 40%;
-    border-radius: 4px;
-    background-color: white;
-  }
+.lid-content {
+  grid-template-columns: 0.2fr 1fr 1fr 1fr 0.2fr;
+  display: grid;
+  position: relative;
+  height: 100vh;
+}
+
+.lid {
+  display: grid;
+  grid-column: 2/5;
+  grid-template-columns: 2fr 2fr 2fr;
+  border-radius: 5px;
+  margin-bottom: 10rem;
+}
+
+.lid1 {
+  min-height: 10rem;
+  grid-column: 1;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: rgba(230, 230, 230, 0.6);
+}
+
+.lid2 {
+  min-height: 10rem;
+  grid-column: 2;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: rgba(230, 230, 230, 0.6);
+}
+
+.lid3 {
+  min-height: 10rem;
+  grid-column: 3;
+  margin: 1rem;
+  padding: 0.5rem;
+  height: 40%;
+  border-radius: 4px;
+  background-color: rgba(230, 230, 230, 0.6);
+}
 
 /* ------------------------------------- word-lid styling ------------------------------------- */
 .content-word-lid {
@@ -396,7 +402,7 @@ textarea {
   display: grid;
   padding: 5rem 0 10rem 0;
   grid-template-columns: 0.2fr 1fr 1rem 1fr 0.2fr;
-  grid-template-rows: 0.5fr 25rem 2rem auto ;
+  grid-template-rows: 0.5fr 25rem 2rem auto;
 }
 
 .word-lid-info {
@@ -433,9 +439,7 @@ textarea {
   /* ------------------------------------- responsive navigation styling ------------------------------------- */
 
   .logo {
-    float: left;
     height: 4rem;
-    position: relative;
     margin: 4%;
   }
 
@@ -504,128 +508,156 @@ textarea {
   /* ------------------------------------- responsive content styling ------------------------------------- */
 
   .content {
-    display: grid;
     grid-template-columns: 0.3fr 1fr 0.3fr;
-    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 35rem 3rem;
+    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 30rem 3rem;
   }
 
+  /* ------------------------------------- API styling ------------------------------------- */
   .API {
-    display: grid;
     grid-column: 1/4;
     grid-row: 2/5;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 0.4fr 1fr 0.4fr;
-    border-radius: 5px;
   }
 
   .api1 {
     grid-column: 2;
     grid-row: 1;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    border-radius: 4px;
-    background-color: white;
   }
 
   .api2 {
     grid-column: 2;
     grid-row: 2;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    border-radius: 4px;
-    background-color: white;
   }
 
   .api3 {
     grid-column: 2;
     grid-row: 3;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    border-radius: 4px;
-    background-color: white;
   }
+
+  .nieuws-content {
+    grid-template-columns: 4rem 1fr 4rem;
+    grid-template-rows: 8rem 1fr 10rem;
+  }
+
 
   /* ------------------------------------- responsive about styling ------------------------------------- */
 
   .About {
-    min-height: 300px;
-    display: grid;
+    min-height: 200px;
     grid-column: 1/4;
     grid-row: 6;
-    padding: 1rem;
-    grid-template-columns: 0.2fr 1fr 1fr 0.2fr;
-    grid-template-rows: 0.1fr 1fr 0.1fr;
-    border-radius: 4px;
+    padding: 0.5rem;
+    grid-template-columns: 2rem 1fr 1fr 2rem;
+    grid-template-rows: 2rem 1fr 2rem;
   }
 
   .Text {
     grid-column: 2;
     grid-row: 2;
-    padding: 1rem;
-    border-radius: 4px;
-    background-color: white;
-    overflow: hidden;
+    padding: 0rem;
+    overflow: scroll;
   }
 
   .img-about {
     grid-column: 3;
     grid-row: 2;
-    width: auto;
-    height: auto;
-    background-color: white;
-    border-radius: 4px;
   }
-  
+
   /* ------------------------------------- responsive footer styling ------------------------------------- */
 
   .footer {
     padding: 0;
+    position: relative;
+    width: 100%;
+    bottom: -10rem;
     display: grid;
     background-color: black;
-    grid-column: 1/8;
     grid-row: 7;
+    grid-column: 1/8;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 13rem;
+  }
+
+  .About1 {
+    min-height: 50%;
+    display: grid;
+    padding: 5rem 1rem 1rem 1rem;
+    grid-template-columns: 0.2fr 1fr.2fr;
+    grid-template-rows: 0.5fr auto 3rem auto 0.5fr;
+    border-radius: 4px;
+  }
+
+  .Text2 {
+    grid-row: 2;
+    grid-column: 2;
+    padding: 2rem 3rem;
+    border-radius: 8px;
+  }
+
+  .img-about2 {
+    grid-row: 4;
+    grid-column: 2;
+    height: auto;
+  }
+
+  /* ------------------------------------- phone contact.html styling -----------------------------------*/
+
+  .containercontact {
+    grid-template-columns: 1rem 1fr 1rem;
+    grid-template-rows: 1rem auto 1rem;
+  }
+
+  .context-box {
+    margin: 0;
+    grid-template-rows: 1rem auto auto 1rem;
+  }
+
+  .left {
+    grid-column: 1/3;
+    grid-row: 3;
+    min-height: 200px;
+  }
+
+  .right {
+    grid-column: 1/3;
+    margin-bottom: 20px;
+    grid-row: 2;
   }
 }
 
 /* ------------------------------------- smaller screen styling ------------------------------------- */
 
 @media only screen and (max-width: 720px) {
+  /* ------------------------------------- responsive content styling ------------------------------------- */
   .content {
     display: grid;
-    grid-template-columns: 0.3fr 1fr 0.3fr;
-    grid-template-rows: 4rem 25rem 25rem 25rem 2rem 50rem 10rem;
+    grid-template-columns: 1rem 1fr 1rem;
+    grid-template-rows: 2rem 25rem 25rem 25rem 1rem 50rem;
   }
 
+  /* ------------------------------------- API styling ------------------------------------- */
+  .API {
+    grid-template-columns: 1rem 1fr 1rem;
+  }
+
+  /* ------------------------------------- responsive about styling ------------------------------------- */
   .About {
-    min-height: 300px;
-    display: grid;
-    grid-column: 1/4;
-    grid-row: 6;
-    padding: 1rem;
-    grid-template-columns: 0.2fr 1fr 0.2fr;
-    grid-template-rows: 0.1fr 1.5fr 2fr 0.1fr;
-    border-radius: 4px;
-    }
+    padding: 0rem;
+    grid-template-columns: 1rem 1fr 1rem;
+    grid-template-rows: 2rem 1.5fr 2fr 2rem;
+  }
 
   .Text {
-    grid-column: 2;
-    grid-row: 2;
-    padding: 1rem;
-    border-radius: 4px;
-    background-color: white;
-    overflow: hidden;
+    overflow:scroll;
   }
 
   .img-about {
     grid-column: 2;
     grid-row: 3;
-    width: auto;
-    height: auto;
-    background-color: white;
-    border-radius: 4px;
+    margin: 1.5rem 0 0 0 ;
   }
-  
+
   .navbar-brand .uil {
     font-size: 40px;
   }
@@ -639,4 +671,62 @@ textarea {
   .social-links .uil:hover {
     color: #00ffff;
   }
+
+  .footer {
+    padding: 0;
+    position: relative;
+  }
+
+  .About1 {
+    padding: 5rem 1rem 1rem 1rem;
+    grid-template-columns: 0.01fr 1fr 0.01fr;
+    grid-template-rows: 2rem auto 3rem auto 2rem;
+  }
+
+  .Text2 {
+    overflow: scroll;
+    max-height: 25rem;
+    grid-row: 2;
+    grid-column: 2;
+  }
+
+  .img-about2 {
+    background-size: cover;
+    grid-row: 4;
+    grid-column: 2;
+    height: 200px;
+  }
+
+  .about-content {
+    height: auto;
+    padding-top: 0;
+  }
+
+
+  /* ------------------------------------- word-lid styling ------------------------------------- */
+.content-word-lid {
+  padding:0;
+  grid-template-columns: 1rem 1fr 1rem;
+  grid-template-rows: 2rem 20rem 1rem 20rem 2rem auto;
+}
+
+.word-lid-info {
+  grid-column: 2;
+  grid-row: 6;
+  padding: 10px;
+}
+
+
+.word-lid-image2 {
+  grid-column: 2;
+  grid-row: 4;
+}
+
+.word-lid-info h2 {
+  font-size: 35px;
+}
+
+.word-lid-info h3 {
+  font-size: 25px;
+}
 }
