--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,14 @@ ul li .link {
 /* --------------------------------------------- Styling container --------------------------------------------- */
 
 .container {
+  background-image: url(../img/background.jpg);
   z-index: 100000;
   display: grid;
   grid-template-rows: 7rem auto;
   position: sticky;
-  width: 100%;
-  top:0%
+  top:0%;
+  scroll-behavior: smooth;
+  
 }
 
 /* --------------------------------------------- Styling Content --------------------------------------------- */
