--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,8 @@ h1 {
 .about-content {
   position: relative;
   height: 50rem;
-  padding-top: 5rem;
+  padding-top: 4rem;
+  padding-bottom: 5rem;
 }
 
 .About1 {
@@ -195,13 +196,29 @@ h1 {
   grid-row: 2;
   grid-column: 2;
   padding: 2rem 3rem;
+  border-spacing: 10%;
   border-radius: 8px;
+}
+
+.Text3 {
+  background-color: rgba(255, 255, 255, 0.9);
+  grid-row: 2;
+  grid-column: 3;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  border-spacing: 10%;;
+  width: 39.5%;
+  margin-left: 8.5%;
 }
 
 .img-about2 {
   background-color: rgba(255, 255, 255, 0.9);
   grid-row: 2;
   grid-column: 4;
+  height: 280%;
+  border-spacing: 10%;
+  padding: 1rem 2rem;
+
 }
 
 /* ------------------------------------- contact.html styling -----------------------------------*/
