--- a/popup/style2.css
+++ b/popup/style2.css
@@ -3,6 +3,7 @@ body2{
 	margin:0;
 	line-height: 1.5;
 	opacity: 95%;
+	text-align: center;
 }
 
 *{
@@ -28,7 +29,7 @@ body2{
 }
 .login-popup .box{
 	background-color:#ffffff;
-	width: 50%;
+	width: 45%;
 	position: absolute;
 	left: 50%;
 	top: 40%;
@@ -46,7 +47,7 @@ body2{
 }
 .login-popup .box .img-area{
 	flex:0 0 50%;
-	max-width: 50%;
+	max-width: 40%;
 	position: relative;
 	overflow: hidden;
 	padding:30px;
@@ -83,7 +84,7 @@ body2{
 .login-popup .box .form{
 	flex:0 0 50%;
 	max-width: 50%;
-	padding:40px 30px;
+	padding:50px 40px;
 }
 
 .login-popup .box .form h1{
