--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,6 @@ h1 {
 .about-content {
   position: relative;
   height: 50rem;
-  padding-top: 4rem;
-  padding-bottom: 5rem;
 }
 
 .About1 {
@@ -193,7 +191,7 @@ h1 {
   display: grid;
   padding: 5rem 1rem 1rem 1rem;
   grid-template-columns: 0.2fr 1fr 0.1fr 1fr 0.2fr;
-  grid-template-rows: 0.5fr auto 0.5fr;
+  grid-template-rows: 0.5fr auto auto 0.5fr;
   border-radius: 4px;
 }
 
@@ -201,6 +199,7 @@ h1 {
   background-color: rgba(255, 255, 255, 0.9);
   grid-row: 2;
   grid-column: 2;
+  margin-bottom:2rem;
   padding: 2rem 3rem;
   border-spacing: 10%;
   border-radius: 8px;
@@ -208,22 +207,22 @@ h1 {
 
 .Text3 {
   background-color: rgba(255, 255, 255, 0.9);
-  grid-row: 2;
-  grid-column: 3;
-  padding: 1rem 2rem;
+  grid-row: 3;
+  grid-column: 2;
   border-radius: 8px;
-  border-spacing: 10%;;
-  width: 39.5%;
-  margin-left: 8.5%;
+  border-spacing: 10%;
+  padding: 2rem 3rem;
+  overflow: scroll;
+  height: 20rem;
 }
 
 .img-about2 {
   background-color: rgba(255, 255, 255, 0.9);
-  grid-row: 2;
+  grid-row: 2/4;
   grid-column: 4;
-  height: 280%;
   border-spacing: 10%;
   padding: 1rem 2rem;
+  margin:2rem 0 2rem 0;
 
 }
 
