--- a/popup/style2.css
+++ b/popup/style2.css
@@ -17,7 +17,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 1099;
+	z-index: 10990000;
 	background-color:rgba(0,0,0,0.6);
 	visibility: hidden;
 	opacity: 0;
