--- a/css/style.css
+++ b/css/style.css
@@ -73,24 +73,24 @@ ul li .link {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px lightgray; 
   border-radius: 10px;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: red; 
+  background: grey; 
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
+  background: darkgrey; 
 }
 
 /* --------------------------------------------- Styling container --------------------------------------------- */
